--- a/test-scores/combine-csv.ipynb
+++ b/test-scores/combine-csv.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import agate\n",
@@ -31,10 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tester_15 = agate.TypeTester(limit=100,force={\n",
@@ -87,10 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "comparison_dict = {}\n",
@@ -104,16 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'COUNTY_DESC': 'NIAGARA', 'L3-L4_PCT': '39%', 'L2_COUNT': '558', 'L1_PCT': '29%', 'L4_PCT': '7%', 'COUNTY_CODE': '40', 'SUBGROUP_CODE': '01', 'L3_COUNT': '551', 'SUBGROUP_NAME': 'All Students', 'NAME': 'NIAGARA COUNTY', 'TOTAL_TESTED': '1722', 'L1_COUNT': '495', 'L4_COUNT': '118', 'ITEM_DESC': 'Grade 3 ELA', 'L2-L4_PCT': '71%', 'NRC_CODE': '', 'NRC_DESC': '', 'SY_END_DATE': '06/30/2017', 'BEDSCODE': '400000000000', 'ITEM_SUBJECT_AREA': 'ELA', 'MEAN_SCALE_SCORE': '306', 'L2_PCT': '32%', 'L3_PCT': '32%'}\n"
+      "OrderedDict([('SY_END_DATE', '06/30/2017'), ('NRC_CODE', ''), ('NRC_DESC', ''), ('COUNTY_CODE', '40'), ('COUNTY_DESC', 'NIAGARA'), ('BEDSCODE', '400000000000'), ('NAME', 'NIAGARA COUNTY'), ('ITEM_SUBJECT_AREA', 'ELA'), ('ITEM_DESC', 'Grade 3 ELA'), ('SUBGROUP_CODE', '01'), ('SUBGROUP_NAME', 'All Students'), ('TOTAL_TESTED', '1722'), ('L1_COUNT', '495'), ('L1_PCT', '29%'), ('L2_COUNT', '558'), ('L2_PCT', '32%'), ('L3_COUNT', '551'), ('L3_PCT', '32%'), ('L4_COUNT', '118'), ('L4_PCT', '7%'), ('L2-L4_PCT', '71%'), ('L3-L4_PCT', '39%'), ('MEAN_SCALE_SCORE', '306')])\n"
      ]
     }
    ],
@@ -123,10 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -137,174 +127,16 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lheinle/anaconda/envs/py35/lib/python3.5/xml/etree/ElementTree.py:1237: ResourceWarning: unclosed file <_io.BufferedReader name='raw/school_scores1011/ELA6 Subgroup Results.xlsx'>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90042\n",
-      "clean_info0=0;clean_info1=0\n",
-      "Grabbing ELA4 Subgroup Results\n",
-      "88574\n",
-      "clean_info0=42449;clean_info1=43244\n",
-      "Grabbing ELA5 Subgroup Results\n",
-      "86815\n",
-      "clean_info0=84281;clean_info1=85662\n",
-      "Grabbing ELA6 Subgroup Results\n",
-      "67491\n",
-      "clean_info0=125145;clean_info1=127254\n",
-      "Grabbing ELA7 Subgroup Results\n",
-      "60036\n",
-      "clean_info0=156615;clean_info1=159665\n",
-      "Grabbing ELA8 Subgroup Results\n",
-      "59280\n",
-      "clean_info0=184502;clean_info1=188401\n",
-      "Grabbing Math3 Subgroup Results\n",
-      "90188\n",
-      "clean_info0=211953;clean_info1=216473\n",
-      "Grabbing Math4 Subgroup Results\n",
-      "88675\n",
-      "clean_info0=254461;clean_info1=259798\n",
-      "Grabbing Math5 Subgroup Results\n",
-      "86970\n",
-      "clean_info0=296350;clean_info1=302247\n",
-      "Grabbing Math6 Subgroup Results\n",
-      "67654\n",
-      "clean_info0=337289;clean_info1=343908\n",
-      "Grabbing Math7 Subgroup Results\n",
-      "60171\n",
-      "clean_info0=368829;clean_info1=376402\n",
-      "Grabbing Math8 Subgroup Results\n",
-      "59437\n",
-      "clean_info0=396789;clean_info1=405178\n",
-      "raw/3-8_ELA_AND_MATH_2010.csv\n",
-      "raw/3-8_ELA_AND_MATH_2011.csv\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "Accessing school_scores0809\n",
-      "Grabbing ELA3 Subgroup Results\n",
-      "88926\n",
-      "clean_info0=0;clean_info1=0\n",
-      "Grabbing ELA4 Subgroup Results\n",
-      "87504\n",
-      "clean_info0=40983;clean_info1=41756\n",
-      "Grabbing ELA5 Subgroup Results\n",
-      "86299\n",
-      "clean_info0=81486;clean_info1=82827\n",
-      "Grabbing ELA6 Subgroup Results\n",
-      "67139\n",
-      "clean_info0=121036;clean_info1=122972\n",
-      "Grabbing ELA7 Subgroup Results\n",
-      "59937\n",
-      "clean_info0=151234;clean_info1=153538\n",
-      "Grabbing ELA8 Subgroup Results\n",
-      "59335\n",
-      "clean_info0=177850;clean_info1=180748\n",
-      "Grabbing Math3 Subgroup Results\n",
-      "89078\n",
-      "clean_info0=203998;clean_info1=207670\n",
-      "Grabbing Math4 Subgroup Results\n",
-      "87703\n",
-      "clean_info0=245074;clean_info1=249478\n",
-      "Grabbing Math5 Subgroup Results\n",
-      "86502\n",
-      "clean_info0=285647;clean_info1=290662\n",
-      "Grabbing Math6 Subgroup Results\n",
-      "67386\n",
-      "clean_info0=325284;clean_info1=330903\n",
-      "Grabbing Math7 Subgroup Results\n",
-      "60085\n",
-      "clean_info0=355567;clean_info1=361607\n",
-      "Grabbing Math8 Subgroup Results\n",
-      "59485\n",
-      "clean_info0=382284;clean_info1=388859\n",
-      "raw/3-8_ELA_AND_MATH_2008.csv\n",
-      "raw/3-8_ELA_AND_MATH_2009.csv\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "Accessing school_scores0607\n",
-      "Grabbing ELA3 Subgroup Results\n",
-      "86661\n",
-      "clean_info0=0;clean_info1=0\n",
-      "Grabbing ELA4 Subgroup Results\n",
-      "86546\n",
-      "clean_info0=39764;clean_info1=40439\n",
-      "Grabbing ELA5 Subgroup Results\n",
-      "86083\n",
-      "clean_info0=79795;clean_info1=80368\n",
-      "Grabbing ELA6 Subgroup Results\n",
-      "65933\n",
-      "clean_info0=119338;clean_info1=119525\n",
-      "Grabbing ELA7 Subgroup Results\n",
-      "57516\n",
-      "clean_info0=148636;clean_info1=149251\n",
-      "Grabbing ELA8 Subgroup Results\n",
-      "56237\n",
-      "clean_info0=173659;clean_info1=175221\n",
-      "Grabbing Math3 Subgroup Results\n",
-      "87439\n",
-      "clean_info0=197912;clean_info1=200475\n",
-      "Grabbing Math4 Subgroup Results\n",
-      "87182\n",
-      "clean_info0=238324;clean_info1=241028\n",
-      "Grabbing Math5 Subgroup Results\n",
-      "86651\n",
-      "clean_info0=278881;clean_info1=281012\n",
-      "Grabbing Math6 Subgroup Results\n",
-      "66417\n",
-      "clean_info0=318865;clean_info1=320302\n",
-      "Grabbing Math7 Subgroup Results\n",
-      "57850\n",
-      "clean_info0=348507;clean_info1=350139\n",
-      "Grabbing Math8 Subgroup Results\n",
-      "56501\n",
-      "clean_info0=373697;clean_info1=376195\n",
-      "raw/3-8_ELA_AND_MATH_2006.csv\n",
-      "raw/3-8_ELA_AND_MATH_2007.csv\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "dict_keys(['COUNTY_DESC', 'ITEM_DESC', 'L4_COUNT', 'ITEM_SUBJECT_AREA', 'L2_COUNT', 'BEDSCODE', 'SUBGROUP_NAME', 'NAME', 'COUNTY_CODE', 'MEAN_SCALE_SCORE', 'TOTAL_TESTED', 'L1_COUNT', 'L3_COUNT'])\n",
-      "Accessing school_scores2012\n",
-      "Grabbing ELA3 Subgroup Results\n",
-      "132949\n",
-      "clean_info0=0;clean_info1=0\n",
-      "Grabbing ELA4 Subgroup Results\n",
-      "130052\n",
-      "clean_info0=62566;clean_info1=0\n",
-      "Grabbing ELA5 Subgroup Results\n",
-      "127264\n",
-      "clean_info0=124029;clean_info1=0\n",
-      "Grabbing ELA6 Subgroup Results\n",
-      "100745\n",
-      "clean_info0=184137;clean_info1=0\n",
-      "Grabbing ELA7 Subgroup Results\n",
-      "91158\n",
-      "clean_info0=231504;clean_info1=0\n",
-      "Grabbing ELA8 Subgroup Results\n",
-      "89884\n",
-      "clean_info0=274128;clean_info1=0\n",
-      "Grabbing Math3 Subgroup Results\n",
-      "133168\n",
-      "clean_info0=315638;clean_info1=0\n",
-      "Grabbing Math4 Subgroup Results\n",
-      "130262\n",
-      "clean_info0=378315;clean_info1=0\n",
-      "Grabbing Math5 Subgroup Results\n",
-      "127604\n",
-      "clean_info0=439906;clean_info1=0\n",
-      "Grabbing Math6 Subgroup Results\n",
-      "100987\n",
-      "clean_info0=500165;clean_info1=0\n",
-      "Grabbing Math7 Subgroup Results\n",
-      "91337\n",
-      "clean_info0=547658;clean_info1=0\n",
-      "Grabbing Math8 Subgroup Results\n",
-      "90096\n",
-      "clean_info0=590375;clean_info1=0\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'raw/school_scores1011/ELA3 Subgroup Results.xlsx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-6fecbd327b0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     98\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Grabbing {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         \u001b[0mgrab_subgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclean_info0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclean_info1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfolder\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'school_scores2012'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mcsv_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'raw/3-8_ELA_AND_MATH_2012.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-6fecbd327b0c>\u001b[0m in \u001b[0;36mgrab_subgroup\u001b[0;34m(csvpath, year_folder, clean_info0, clean_info1)\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0;34m'YEAR'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0magate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mText\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     })\n\u001b[0;32m---> 89\u001b[0;31m     \u001b[0mschools\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_xlsx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn_types\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtester\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mschools\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'clean_info0={0};clean_info1={1}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_info0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_info1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/agateexcel/table_xlsx.py\u001b[0m in \u001b[0;36mfrom_xlsx\u001b[0;34m(cls, path, sheet, skip_lines, header, read_only, reset_dimensions, **kwargs)\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mbook\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopenpyxl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_workbook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mread_only\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread_only\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_only\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'raw/school_scores1011/ELA3 Subgroup Results.xlsx'"
      ]
     }
    ],
@@ -401,7 +233,9 @@
     "    print(len(schools))\n",
     "    print('clean_info0={0};clean_info1={1}'.format(len(clean_info0), len(clean_info1)))\n",
     "    mani_table(schools, subgroup[0], year_folder, clean_info0, clean_info1)\n",
+    "\n",
     "folders = ['school_scores1011', 'school_scores0809', 'school_scores0607', 'school_scores2012']\n",
+    "\n",
     "for folder in folders:\n",
     "    clean_info0 = []\n",
     "    clean_info1 = []\n",
@@ -443,9 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -464,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -508,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
